RESOLVED FIXED34006
svg/custom/text-zoom.xhtml fails on Windows
https://bugs.webkit.org/show_bug.cgi?id=34006
Summary svg/custom/text-zoom.xhtml fails on Windows
Adam Roben (:aroben)
Reported 2010-01-22 09:31:24 PST
svg/custom/text-zoom.xhtml fails on Windows. See <http://build.webkit.org/results/Windows%20Release%20(Tests)/r53703%20(8266)/svg/custom/text-zoom-pretty-diff.html> for the diff produced by the test. It looks like the green rectangle is getting zoomed when it shouldn't.
Attachments
Set the default value for WebKitZoomsTextOnlyPreferenceKey to true (3.37 KB, patch)
2010-01-23 17:32 PST, mitz
mjs: review+
Adam Roben (:aroben)
Comment 1 2010-01-22 09:31:52 PST
Adam Roben (:aroben)
Comment 2 2010-01-22 09:33:01 PST
The test fails in Safari as well: If I check "Zoom Text Only" in the View menu, then zoom, the rectangle zooms and I do see red. The same thing happens if I uncheck "Zoom Text Only".
Adam Roben (:aroben)
Comment 3 2010-01-22 09:43:51 PST
(In reply to comment #2) > The test fails in Safari as well: > > If I check "Zoom Text Only" in the View menu, then zoom, the rectangle zooms > and I do see red. > > The same thing happens if I uncheck "Zoom Text Only". I was testing with r53683. With r53686 the test passes in Safari, but still fails in DRT.
Adam Roben (:aroben)
Comment 4 2010-01-22 10:33:27 PST
Expected failure results for this test were checked in in r53704, so this test now appears to pass on Windows, but the results are incorrect.
mitz
Comment 5 2010-01-22 12:53:49 PST
The problem is that WebPreferences::initializeDefaultSettings() fails to set the default value of WebKitZoomsTextOnlyPreferenceKey to true.
mitz
Comment 6 2010-01-23 17:32:16 PST
Created attachment 47284 [details] Set the default value for WebKitZoomsTextOnlyPreferenceKey to true
Maciej Stachowiak
Comment 7 2010-01-23 17:45:28 PST
Comment on attachment 47284 [details] Set the default value for WebKitZoomsTextOnlyPreferenceKey to true r=me
mitz
Comment 8 2010-01-23 17:51:44 PST
Note You need to log in before you can comment on or make changes to this bug.