<rdar://problem/7569820> svg/custom/text-zoom.xhtml fails on Windows https://bugs.webkit.org/show_bug.cgi?id=34006

Reviewed by Maciej Stachowiak.

WebKit/win:

* WebPreferences.cpp:
(WebPreferences::initializeDefaultSettings): Added WebKitZoomsTextOnlyPreferenceKey
with a default value of true.

LayoutTests:

* platform/win/svg/custom/text-zoom-expected.txt: Removed.



Canonical link: https://commits.webkit.org/45172@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53773 268f45cc-cd09-0410-ab3c-d52691b4dbfc